--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.sceyt.chat.ui">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".SceytUiKitApp"
         android:allowBackup="true"
@@ -11,6 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity
+            android:name=".presentation.uicomponents.conversatin.ConversationActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:configChanges="uiMode"
