Was created UI in the conversation page from text messages, creating functionality and UI from other views is in process. Also was started creating UI and functionality for message reactions.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".presentation.uicomponents.conversatin.ConversationActivity"
+            android:name=".presentation.uicomponents.conversation.ConversationActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
