--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,5 @@ dependencies {
     implementation 'org.apache.commons:commons-compress:1.21'
 
     implementation "io.github.aghajari:AXEmojiView-GoogleProvider:1.5.0"
+    implementation 'com.koushikdutta.ion:ion:3.1.0'
 }
