--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,11 +17,13 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".presentation.uicomponents.conversation.ConversationActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/DefaultFontTheme" />
         <activity
             android:name=".MainActivity"
             android:configChanges="uiMode"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/DefaultFontTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
