--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             android:exported="false"
             android:theme="@style/DefaultFontTheme" />
         <activity
-            android:name=".MainActivity"
+            android:name=".presentation.mainactivity.MainActivity"
             android:configChanges="uiMode"
             android:exported="true"
             android:theme="@style/DefaultFontTheme">
