--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,5 @@ dependencies {
     implementation supportDependencies.datastorePreferences
     implementation supportDependencies.sdp
     implementation supportDependencies.ssp
+    implementation 'com.google.android.flexbox:flexbox:3.0.0'
 }
