--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".presentation.uicomponents.conversation.conversationinfo.ConversationInfoActivity"
+            android:exported="false"
+            android:theme="@style/DefaultFontTheme" />
+        <activity
             android:name=".presentation.uicomponents.conversation.ConversationActivity"
             android:exported="false"
             android:theme="@style/DefaultFontTheme" />
@@ -41,13 +45,13 @@
                 android:resource="@xml/provider_paths" />
         </provider>
 
-        <service android:name=".services.SceytFirebaseMessageReceiver"
+        <service
+            android:name=".services.SceytFirebaseMessageReceiver"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-
     </application>
 
 </manifest>
