Was created functionality to edit channel info. Creating functionality ConversationInfoActivity.kt is in progress.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".presentation.uicomponents.conversation.conversationinfo.ConversationInfoActivity"
+            android:name="com.sceyt.chat.ui.presentation.uicomponents.conversationinfo.ConversationInfoActivity"
             android:exported="false"
             android:theme="@style/DefaultFontTheme" />
         <activity
