--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -20,14 +20,14 @@ ext {
 
     datastore_version = '1.0.0'
 
-    exo_player_media_version = "1.0.0-alpha03"
+    exo_player_media_version = '1.0.0-beta01'
 
     material_version = '1.7.0-alpha02'
 
-    fragment_ktx_version = '1.4.1'
+    fragment_ktx_version = '1.5.0'
     firebase_core_version = '20.0.2'
-    firebase_messaging_version = '23.0.5'
-    firebase_bom_version = '30.1.0'
+    firebase_messaging_version = '23.0.6'
+    firebase_bom_version = '30.2.0'
     firebase_crashlitics_version = '18.2.6'
 
     glide_version = '4.13.2'
@@ -41,7 +41,8 @@ ext {
     koin_version = '3.1.5'
 
     legacy_version = '1.0.0'
-    lifecycle_version = '2.4.1'
+    lifecycle_version = '2.5.0'
+    lottie_version = '5.2.0'
 
     voley_version = '1.2.1'
 
@@ -51,7 +52,7 @@ ext {
     retrofit_version = '2.9.0'
 
     sdp_version = '1.1.0'
-    ssp_version = '1.0.6'
+    ssp_version = '1.1.0'
     swipe_refresh_layout_version = '1.1.0'
 
     supportDependencies = [
@@ -75,6 +76,7 @@ ext {
             koinAndroid         : "io.insert-koin:koin-android:$koin_version",
             lifecycleRuntime    : "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version",
             lifecycleViewModel  : "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version",
+            lottie              : "com.airbnb.android:lottie:${lottie_version}",
             voley               : "com.android.volley:volley:$voley_version",
             material            : "com.google.android.material:material:$material_version",
             okHttp              : "com.squareup.okhttp3:okhttp:$ok_http_version",
