--- a/settings.gradle
+++ b/settings.gradle
@@ -11,6 +11,7 @@ dependencyResolutionManagement {
         google()
         mavenCentral()
         maven { url = "https://jcenter.bintray.com" }
+        maven { url 'https://jitpack.io' }
     }
 }
 rootProject.name = "SceytUiKit"
