--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,9 +20,22 @@
         tools:ignore="UnusedAttribute">
 
         <activity
+            android:name=".presentation.login.LoginActivity"
+            android:exported="true"
+            android:theme="@style/DefaultFontTheme"
+            android:windowSoftInputMode="adjustResize">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity
             android:name=".presentation.uicomponents.changerole.ChangeRoleActivity"
             android:exported="false"
             android:theme="@style/DefaultFontTheme" />
+
         <activity
             android:name=".presentation.uicomponents.conversationinfo.CustomConversationInfoActivity"
             android:exported="false"
@@ -34,36 +47,34 @@
             android:exported="false"
             android:theme="@style/DefaultFontTheme"
             android:windowSoftInputMode="adjustNothing" />
+
         <activity
             android:name=".presentation.uicomponents.conversation.ConversationActivity"
             android:exported="false"
-            android:launchMode="singleTask"
             android:theme="@style/DefaultFontTheme"
             android:windowSoftInputMode="adjustResize" />
+
         <activity
             android:name=".presentation.uicomponents.addmembers.AddMembersActivity"
             android:exported="false"
             android:theme="@style/DefaultFontTheme" />
+
         <activity
             android:name=".presentation.uicomponents.newchannel.NewChannelActivity"
             android:exported="false"
             android:theme="@style/DefaultFontTheme" />
+
         <activity
             android:name=".presentation.uicomponents.creategroup.CreateGroupActivity"
             android:exported="false"
             android:theme="@style/DefaultFontTheme" />
+
         <activity
             android:name=".presentation.mainactivity.MainActivity"
             android:configChanges="uiMode"
-            android:exported="true"
+            android:exported="false"
             android:launchMode="singleTask"
-            android:theme="@style/DefaultFontTheme">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:theme="@style/DefaultFontTheme" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -82,6 +93,7 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
+
     </application>
 
 </manifest>
