Was added functionality to live update last message in channels list page. Was changed layout manager in message reactions.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,7 @@ dependencies {
     implementation supportDependencies.datastorePreferences
     implementation supportDependencies.jsoup
     implementation supportDependencies.lottie
+    implementation supportDependencies.flexbox
     implementation supportDependencies.sdp
     implementation supportDependencies.ssp
 }
