--- a/AXEmojiView/src/main/AndroidManifest.xml
+++ b/AXEmojiView/src/main/AndroidManifest.xml
@@ -1,5 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.aghajari.emojiview">
-
-    /
-</manifest>
+<manifest package="com.aghajari.emojiview"/>
