--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -31,6 +31,7 @@ ext {
     firebase_messaging_version = '23.0.6'
     firebase_bom_version = '30.2.0'
     firebase_crashlitics_version = '18.2.6'
+    flex_box_version = "3.0.0"
 
     glide_version = '4.13.2'
     glide_transformations_version = '4.3.0'
@@ -74,6 +75,7 @@ ext {
             firebaseBom         : "com.google.firebase:firebase-bom:$firebase_bom_version",
             firebaseCrashlytics : "com.google.firebase:firebase-crashlytics-ktx:$firebase_crashlitics_version",
             fragmentKtx         : "androidx.fragment:fragment-ktx:$fragment_ktx_version",
+            flexbox             : "com.google.android.flexbox:flexbox:$flex_box_version",
             glide               : "com.github.bumptech.glide:glide:$glide_version",
             ion                 : "com.koushikdutta.ion:ion:$ion_version",
             koinAndroid         : "io.insert-koin:koin-android:$koin_version",
