--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -8,10 +8,10 @@ ext {
     app_version_name = "1.0.0"
 
     /** Dependency implementation versions*/
-    app_compat_version = '1.4.2'
+    app_compat_version = '1.5.0'
     activity_ktx_version = '1.4.0'
     async_layout_inflater_version = '1.0.0'
-    ax_emoji_version = '1.5.0'
+    ax_emoji_version = '1.5.2'
 
     card_view_version = '1.0.0'
     core_ktx_version = '1.8.0'
@@ -20,17 +20,17 @@ ext {
 
     datastore_version = '1.0.0'
 
-    exo_player_media_version = '1.0.0-beta01'
+    exo_player_media_version = '1.0.0-beta02'
 
     jsoup_version = '1.15.2'
 
-    material_version = '1.7.0-alpha02'
+    material_version = '1.7.0-beta01'
     moshi_converter_version = '2.9.0'
 
-    fragment_ktx_version = '1.5.0'
+    fragment_ktx_version = '1.5.2'
     firebase_core_version = '20.0.2'
-    firebase_messaging_version = '23.0.6'
-    firebase_bom_version = '30.2.0'
+    firebase_messaging_version = '23.0.7'
+    firebase_bom_version = '30.3.2'
     firebase_crashlitics_version = '18.2.6'
     flex_box_version = "3.0.0"
 
@@ -42,10 +42,10 @@ ext {
     ion_version = "3.1.0"
 
     kotlin_version = '1.6.10'
-    koin_version = '3.1.5'
+    koin_version = '3.2.0'
 
     legacy_version = '1.0.0'
-    lifecycle_version = '2.5.0'
+    lifecycle_version = '2.5.1'
     lottie_version = '5.2.0'
 
     voley_version = '1.2.1'
@@ -54,7 +54,7 @@ ext {
 
     recycler_view_version = '1.2.1'
     retrofit_version = '2.9.0'
-    room_version = '2.4.0'
+    room_version = '2.4.3'
 
     sdp_version = '1.1.0'
     ssp_version = '1.1.0'
