Removed unused files. Changed some functions and properties from public to internal.

--- a/SceytChatUiKit/build.gradle
+++ b/SceytChatUiKit/build.gradle
@@ -39,8 +39,8 @@ android {
 }
 
 dependencies {
-    implementation project(':SceytSDK-debug')
-    implementation project(':AXEmojiView')
+    api project(':SceytSDK-debug')
+    api project(':AXEmojiView')
 
     implementation supportDependencies.coreKtx
     implementation supportDependencies.appCompat
