--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -24,7 +24,7 @@ ext {
 
     jsoup_version = '1.15.3'
 
-    material_version = '1.7.0-beta01'
+    material_version = '1.7.0-rc01'
     moshi_converter_version = '2.9.0'
 
     fragment_ktx_version = '1.5.2'
