--- a/SceytChatUiKit/build.gradle
+++ b/SceytChatUiKit/build.gradle
@@ -5,6 +5,81 @@ plugins {
     id 'kotlin-parcelize'
 }
 
+apply plugin: 'maven-publish' // Apply this plugin at the top of your library build.gradle
+
+def githubProperties = new Properties()
+githubProperties.load(new FileInputStream(rootProject.file("github.properties"))) //Set env variable GPR_USER & GPR_API_KEY if not adding a properties file
+
+def getVersionName = { ->
+    return "1.2.7" // Replace with version Name
+}
+
+def getArtificatId = { ->
+    return "sceytkit" // Replace with library name ID
+}
+
+task androidSourcesJar(type: Jar) {
+    archiveClassifier.set('sources')
+    if (project.plugins.findPlugin("com.android.library")) {
+        from android.sourceSets.main.java.srcDirs
+        from android.sourceSets.main.kotlin.srcDirs
+    } else {
+        from sourceSets.main.java.srcDirs
+        from sourceSets.main.kotlin.srcDirs
+    }
+}
+
+task sourceJar(type: Jar) {
+    from android.sourceSets.main.java.srcDirs
+    classifier "sources"
+}
+
+
+publishing {
+    publications {
+        bar(MavenPublication) {
+            groupId 'com.sceytkit' // Replace with group ID
+            artifactId getArtificatId()
+            version getVersionName()
+
+            artifact sourceJar
+            artifact("$buildDir/outputs/aar/SceytChatUiKit-release.aar")
+
+
+            pom.withXml {
+                def dependenciesNode = asNode().appendNode('dependencies')
+                //Iterate over the compile dependencies (we don't want the test ones), adding a <dependency> node for each
+                configurations.api.allDependencies.each {
+                    def dependencyNode = dependenciesNode.appendNode('dependency')
+                    dependencyNode.appendNode('groupId', it.group)
+                    dependencyNode.appendNode('artifactId', it.name)
+                    dependencyNode.appendNode('version', it.version)
+                }
+            }
+        }
+    }
+
+    /* repositories {
+         maven {
+             name = "GitHubPackages"
+             url = uri("https://maven.pkg.github.com/UserID/REPOSITORY")
+         }
+     }*/
+
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = uri("https://maven.pkg.github.com/maratsct/TestSceyt")
+            credentials {
+
+                username = githubProperties['gpr.usr'] ?: System.getenv("GPR_USER")
+                password = githubProperties['gpr.key'] ?: System.getenv("GPR_API_KEY")
+            }
+        }
+
+    }
+}
+
 android {
     compileSdk 32
 
@@ -23,20 +98,12 @@ android {
         }
     }
 
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
-
     buildFeatures {
         dataBinding true
         viewBinding true
     }
 }
+
 
 dependencies {
     api project(':SceytSDK-debug')
@@ -49,7 +116,7 @@ dependencies {
     implementation supportDependencies.recyclerView
     implementation supportDependencies.fragmentKtx
     implementation supportDependencies.lifecycleRuntime
-    implementation supportDependencies.asyncLayoutInflater
+    api supportDependencies.asyncLayoutInflater
     implementation supportDependencies.glide
     implementation supportDependencies.axEmoji
     implementation supportDependencies.ion
@@ -59,15 +126,15 @@ dependencies {
     implementation supportDependencies.voley
     kapt supportDependencies.roomCompiler
     implementation supportDependencies.roomRuntime
-    implementation supportDependencies.roomKtx
-    implementation supportDependencies.koinAndroid
-    implementation supportDependencies.exoPlayerMedia
-    implementation supportDependencies.exoPlayerUi
-    implementation supportDependencies.datastore
-    implementation supportDependencies.datastorePreferences
+    api supportDependencies.roomKtx
+    api supportDependencies.koinAndroid
+    api supportDependencies.exoPlayerMedia
+    api supportDependencies.exoPlayerUi
+    api supportDependencies.datastore
+    api supportDependencies.datastorePreferences
     implementation supportDependencies.moshiConverter
     implementation supportDependencies.jsoup
-    implementation supportDependencies.lottie
+    api supportDependencies.lottie
     implementation supportDependencies.flexbox
     implementation supportDependencies.sdp
     implementation supportDependencies.ssp
