Added logic to clear focus in search view when keyboard is close. Fixed bug to show last message writer name, when firstname is empty.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,6 +63,7 @@
             android:name=".presentation.mainactivity.MainActivity"
             android:configChanges="uiMode"
             android:exported="false"
+            android:windowSoftInputMode="adjustNothing"
             android:launchMode="singleTask"
             android:theme="@style/DefaultFontTheme" />
 
