Added logic to update user presence. Added maven publish logic

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,8 @@ android {
 
 dependencies {
     implementation project(':SceytChatUiKit')
+    implementation project(':SceytSDK-debug')
+    implementation project(':AXEmojiView')
 
     implementation supportDependencies.coreKtx
     implementation supportDependencies.appCompat
