--- a/SceytChatUiKit/build.gradle
+++ b/SceytChatUiKit/build.gradle
@@ -5,6 +5,58 @@ plugins {
     id 'kotlin-parcelize'
 }
 
+apply plugin: 'maven-publish'
+
+def githubProperties = new Properties()
+githubProperties.load(new FileInputStream(rootProject.file("github.properties")))
+
+def getVersionName = { ->
+    return "1.3.2"
+}
+
+def getArtifactId = { ->
+    return "sceytkit"
+}
+
+task sourceJar(type: Jar) {
+    from android.sourceSets.main.java.srcDirs
+    classifier "sources"
+}
+
+publishing {
+    publications {
+        bar(MavenPublication) {
+            groupId 'com.sceytkit'
+            artifactId getArtifactId()
+            version getVersionName()
+
+            artifact sourceJar
+            artifact("$buildDir/outputs/aar/SceytChatUiKit-release.aar")
+
+            pom.withXml {
+                def dependenciesNode = asNode().appendNode('dependencies')
+                configurations.api.allDependencies.each {
+                    def dependencyNode = dependenciesNode.appendNode('dependency')
+                    dependencyNode.appendNode('groupId', it.group)
+                    dependencyNode.appendNode('artifactId', it.name)
+                    dependencyNode.appendNode('version', it.version)
+                }
+            }
+        }
+    }
+
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = uri("https://maven.pkg.github.com/maratsct/TestSceyt")
+            credentials {
+                username = githubProperties['gpr.usr'] ?: System.getenv("GPR_USER")
+                password = githubProperties['gpr.key'] ?: System.getenv("GPR_API_KEY")
+            }
+        }
+    }
+}
+
 android {
     compileSdk 32
 
@@ -40,8 +92,8 @@ android {
 
 
 dependencies {
-    api project(':SceytSDK-debug')
-    api project(':AXEmojiView')
+    implementation project(':SceytSDK-debug')
+    implementation project(':AXEmojiView')
 
     implementation supportDependencies.coreKtx
     implementation supportDependencies.appCompat
@@ -50,7 +102,6 @@ dependencies {
     implementation supportDependencies.recyclerView
     implementation supportDependencies.fragmentKtx
     implementation supportDependencies.lifecycleRuntime
-    implementation supportDependencies.asyncLayoutInflater
     implementation supportDependencies.glide
     implementation supportDependencies.axEmoji
     implementation supportDependencies.ion
@@ -60,15 +111,14 @@ dependencies {
     implementation supportDependencies.voley
     kapt supportDependencies.roomCompiler
     implementation supportDependencies.roomRuntime
-    implementation supportDependencies.roomKtx
+    api supportDependencies.roomKtx
     api supportDependencies.koinAndroid
-    implementation supportDependencies.exoPlayerMedia
-    implementation supportDependencies.exoPlayerUi
-    implementation supportDependencies.datastore
-    implementation supportDependencies.datastorePreferences
+    api supportDependencies.exoPlayerMedia
+    api supportDependencies.exoPlayerUi
+    api supportDependencies.lottie
+    api supportDependencies.asyncLayoutInflater
     implementation supportDependencies.moshiConverter
     implementation supportDependencies.jsoup
-    implementation supportDependencies.lottie
     implementation supportDependencies.flexbox
     implementation supportDependencies.sdp
     implementation supportDependencies.ssp
