--- a/SceytChatUiKit/build.gradle
+++ b/SceytChatUiKit/build.gradle
@@ -11,7 +11,7 @@ def githubProperties = new Properties()
 githubProperties.load(new FileInputStream(rootProject.file("github.properties")))
 
 def getVersionName = { ->
-    return "1.3.2"
+    return "1.3.9"
 }
 
 def getArtifactId = { ->
@@ -95,31 +95,31 @@ dependencies {
     implementation project(':SceytSDK-debug')
     implementation project(':AXEmojiView')
 
-    implementation supportDependencies.coreKtx
-    implementation supportDependencies.appCompat
-    implementation supportDependencies.material
-    implementation supportDependencies.constraintlayout
-    implementation supportDependencies.recyclerView
-    implementation supportDependencies.fragmentKtx
-    implementation supportDependencies.lifecycleRuntime
-    implementation supportDependencies.glide
+    api supportDependencies.coreKtx
+    api supportDependencies.appCompat
+    api supportDependencies.material
+    api supportDependencies.constraintlayout
+    api supportDependencies.recyclerView
+    api supportDependencies.fragmentKtx
+    api supportDependencies.lifecycleRuntime
+    api supportDependencies.glide
     implementation supportDependencies.axEmoji
-    implementation supportDependencies.ion
-    implementation supportDependencies.firebaseBom
-    implementation supportDependencies.firebaseMessaging
-    implementation supportDependencies.okHttp
-    implementation supportDependencies.voley
+    api supportDependencies.ion
+    api supportDependencies.firebaseBom
+    api supportDependencies.firebaseMessaging
+    api supportDependencies.okHttp
+    api supportDependencies.voley
     kapt supportDependencies.roomCompiler
-    implementation supportDependencies.roomRuntime
+    api supportDependencies.roomRuntime
     api supportDependencies.roomKtx
     api supportDependencies.koinAndroid
     api supportDependencies.exoPlayerMedia
     api supportDependencies.exoPlayerUi
     api supportDependencies.lottie
     api supportDependencies.asyncLayoutInflater
-    implementation supportDependencies.moshiConverter
-    implementation supportDependencies.jsoup
-    implementation supportDependencies.flexbox
-    implementation supportDependencies.sdp
-    implementation supportDependencies.ssp
+    api supportDependencies.moshiConverter
+    api supportDependencies.jsoup
+    api supportDependencies.flexbox
+    api supportDependencies.sdp
+    api supportDependencies.ssp
 }
