--- a/SceytChatUiKit/build.gradle
+++ b/SceytChatUiKit/build.gradle
@@ -11,7 +11,7 @@ def githubProperties = new Properties()
 githubProperties.load(new FileInputStream(rootProject.file("github.properties")))
 
 def getVersionName = { ->
-    return "1.3.13"
+    return "1.3.18"
 }
 
 def getArtifactId = { ->
@@ -102,6 +102,7 @@ dependencies {
     api supportDependencies.recyclerView
     api supportDependencies.fragmentKtx
     api supportDependencies.lifecycleRuntime
+    api supportDependencies.liveEvent
     api supportDependencies.glide
     implementation supportDependencies.axEmoji
     api supportDependencies.ion
