Added logic to set "remove" icon color in Message popup

--- a/SceytChatUiKit/build.gradle
+++ b/SceytChatUiKit/build.gradle
@@ -123,4 +123,5 @@ dependencies {
     api supportDependencies.flexbox
     api supportDependencies.sdp
     api supportDependencies.ssp
+    implementation 'com.github.shuhart:stickyheader:1.1.0'
 }
