--- a/SceytChatUiKit/build.gradle
+++ b/SceytChatUiKit/build.gradle
@@ -11,7 +11,7 @@ def githubProperties = new Properties()
 githubProperties.load(new FileInputStream(rootProject.file("github.properties")))
 
 def getVersionName = { ->
-    return "1.3.88"
+    return "1.3.89"
 }
 
 def getArtifactId = { ->
@@ -123,4 +123,5 @@ dependencies {
     api supportDependencies.sdp
     api supportDependencies.ssp
     implementation 'com.github.shuhart:stickyheader:1.1.0'
+    implementation 'com.github.AbedElazizShe:LightCompressor:1.0.1'
 }
