--- a/SceytChatUiKit/build.gradle
+++ b/SceytChatUiKit/build.gradle
@@ -122,6 +122,5 @@ dependencies {
     api supportDependencies.flexbox
     api supportDependencies.sdp
     api supportDependencies.ssp
-    implementation 'com.github.shuhart:stickyheader:1.1.0'
-    implementation 'com.github.AbedElazizShe:LightCompressor:1.0.1'
+    api supportDependencies.lightCompressor
 }
