--- a/SceytChatUiKit/src/main/AndroidManifest.xml
+++ b/SceytChatUiKit/src/main/AndroidManifest.xml
@@ -25,6 +25,15 @@
                 android:resource="@xml/provider_paths" />
         </provider>
 
+        <service
+            android:name=".services.SceytFirebaseMessageReceiver"
+            android:exported="false">
+
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
     </application>
 
 </manifest>
