--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -62,6 +62,8 @@ ext {
     ssp_version = '1.1.0'
     swipe_refresh_layout_version = '1.1.0'
 
+    work_version = "2.7.1"
+
     supportDependencies = [
             appCompat           : "androidx.appcompat:appcompat:$app_compat_version",
             asyncLayoutInflater : "androidx.asynclayoutinflater:asynclayoutinflater:$async_layout_inflater_version",
@@ -100,5 +102,6 @@ ext {
             sdp                 : "com.intuit.sdp:sdp-android:$sdp_version",
             ssp                 : "com.intuit.ssp:ssp-android:$ssp_version",
             swipeRefreshLayout  : "androidx.swiperefreshlayout:swiperefreshlayout:$swipe_refresh_layout_version",
+            workRuntimeKtx      : "androidx.work:work-runtime-ktx:$work_version",
     ]
 }
