--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -39,6 +39,7 @@ ext {
     glide_version = '4.14.2'
     glide_compiler_version = '4.12.0'
     gson_version = '2.8.9'
+    glide_transformations_version = '4.3.0'
 
     ion_version = "3.1.0"
 
@@ -83,6 +84,7 @@ ext {
             fragmentKtx         : "androidx.fragment:fragment-ktx:$fragment_ktx_version",
             flexbox             : "com.google.android.flexbox:flexbox:$flex_box_version",
             glide               : "com.github.bumptech.glide:glide:$glide_version",
+            glideTransformations: "jp.wasabeef:glide-transformations:$glide_transformations_version",
             ion                 : "com.koushikdutta.ion:ion:$ion_version",
             koinAndroid         : "io.insert-koin:koin-android:$koin_version",
             lifecycleRuntime    : "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version",
