--- a/SceytChatUiKit/src/main/AndroidManifest.xml
+++ b/SceytChatUiKit/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
             android:exported="false"
             android:theme="@style/DefaultFontTheme"
             android:windowSoftInputMode="adjustNothing" />
+        <activity android:name=".presentation.uicomponents.mediaview.MediaActivity" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
