Replace debug sceyt sdk with release

--- a/SceytChatUiKit/build.gradle
+++ b/SceytChatUiKit/build.gradle
@@ -91,7 +91,7 @@ android {
 
 
 dependencies {
-    implementation project(':SceytSDK-debug')
+    implementation project(':SceytSDK')
     implementation project(':AXEmojiView')
 
     api supportDependencies.coreKtx
