--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,7 @@ android {
 
 dependencies {
     implementation project(':SceytChatUiKit')
-    implementation project(':SceytSDK-debug')
+    implementation project(':SceytSDK')
     implementation project(':AXEmojiView')
 
     implementation supportDependencies.coreKtx
