--- a/SceytSDK/build.gradle
+++ b/SceytSDK/build.gradle
@@ -1,2 +1,3 @@
 configurations.maybeCreate("default")
+//artifacts.add("default", file('SceytSDK-debug.aar'))
 artifacts.add("default", file('SceytSDK-release.aar'))
