--- a/SceytSDK/build.gradle
+++ b/SceytSDK/build.gradle
@@ -1,3 +1,7 @@
 configurations.maybeCreate("default")
 //artifacts.add("default", file('SceytSDK-debug.aar'))
 artifacts.add("default", file('SceytSDK-release.aar'))
+
+task clean(type: Delete) {
+    delete project.buildDir
+}
