--- a/SceytChatUiKit/src/main/AndroidManifest.xml
+++ b/SceytChatUiKit/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="com.sceyt.sceytchatuikit">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -15,7 +14,10 @@
             android:exported="false"
             android:theme="@style/DefaultFontTheme"
             android:windowSoftInputMode="adjustNothing" />
-        <activity android:name=".presentation.uicomponents.mediaview.MediaActivity" />
+        <activity
+            android:name=".presentation.uicomponents.mediaview.MediaActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/PreviewTheme" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
