--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:label="@string/app_name"
         android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
+        android:allowBackup="false"
         android:supportsRtl="false"
         android:theme="@style/SceytAppTheme">
         <activity android:name="com.sceyt.sceytchatuikit.presentation.uicomponents.share.SceytShareActivity"
