Created logic to open media preview. Fixed issue MessageInputView.kt. Refactored logic to update file upload progress.

--- a/SceytChatUiKit/build.gradle
+++ b/SceytChatUiKit/build.gradle
@@ -127,4 +127,5 @@ dependencies {
     api supportDependencies.lightCompressor
     api supportDependencies.workRuntimeKtx
     api supportDependencies.waveSeekBar
+    implementation supportDependencies.photoView
 }
