--- a/settings.gradle
+++ b/settings.gradle
@@ -10,12 +10,15 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        maven {
+            url 'https://s01.oss.sonatype.org/content/repositories/snapshots/'
+        }
         maven { url = "https://jcenter.bintray.com" }
         maven { url 'https://jitpack.io' }
     }
 }
 rootProject.name = "SceytUiKit"
+
 include ':app'
-include ':SceytSDK'
 include ':AXEmojiView'
 include ':SceytChatUiKit'
