--- a/SceytChatUiKit/build.gradle
+++ b/SceytChatUiKit/build.gradle
@@ -92,15 +92,15 @@ android {
 
 
 dependencies {
-    implementation project(':SceytSDK')
     implementation project(':AXEmojiView')
 
-    api supportDependencies.coreKtx
     api supportDependencies.appCompat
     api supportDependencies.material
     api supportDependencies.constraintlayout
     api supportDependencies.recyclerView
     api supportDependencies.fragmentKtx
+    api supportDependencies.coreKtx
+    api supportDependencies.sceytSdk
     api supportDependencies.lifecycleRuntime
     api supportDependencies.liveEvent
     api supportDependencies.glide
