--- a/SceytChatUiKit/build.gradle
+++ b/SceytChatUiKit/build.gradle
@@ -6,6 +6,7 @@ plugins {
 }
 
 apply plugin: 'maven-publish'
+//apply from: "${rootProject.projectDir}/maven-publish/publish-module.gradle"
 
 def githubProperties = new Properties()
 githubProperties.load(new FileInputStream(rootProject.file("github.properties")))
