--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,12 @@ plugins {
     id 'com.android.application' version '7.4.2' apply false
     id 'com.android.library' version '7.4.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
+    id 'io.github.gradle-nexus.publish-plugin' version '1.2.0' apply true
+    id 'com.google.gms.google-services' version '4.3.15' apply false
 }
 
 apply from: 'dependencies.gradle'
+//apply from: "${rootDir}/maven-publish/publish-root.gradle"
 
 task clean(type: Delete) {
     delete rootProject.buildDir
