--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -54,6 +54,7 @@ ext {
     light_compressor_version = '1.0.1'
 
     voley_version = '1.2.1'
+    vanniktech_google_emoji_version = '0.16.0'
 
     ok_http_version = '5.0.0-alpha.8'
 
@@ -73,8 +74,6 @@ ext {
             appCompat            : "androidx.appcompat:appcompat:$app_compat_version",
             asyncLayoutInflater  : "androidx.asynclayoutinflater:asynclayoutinflater:$async_layout_inflater_version",
             activityKtx          : "androidx.activity:activity-ktx:$activity_ktx_version",
-            axEmojiGoogleProvider: "io.github.aghajari:AXEmojiView-GoogleProvider:$ax_emoji_version",
-            axEmoji              : "io.github.aghajari:AXEmojiView:$ax_emoji_version",
             coreKtx              : "androidx.core:core-ktx:$core_ktx_version",
             constraintlayout     : "androidx.constraintlayout:constraintlayout:$constraint_layout_version",
             cardView             : "androidx.cardview:cardview:$card_view_version",
@@ -99,6 +98,7 @@ ext {
             liveEvent            : "com.github.hadilq.liveevent:liveevent:$live_event_version",
             lightCompressor      : "com.github.AbedElazizShe:LightCompressor:$light_compressor_version",
             voley                : "com.android.volley:volley:$voley_version",
+            vanniktechGoogleEmoji: "com.vanniktech:emoji-google:$vanniktech_google_emoji_version",
             material             : "com.google.android.material:material:$material_version",
             moshiConverter       : "com.squareup.retrofit2:converter-moshi:$moshi_converter_version",
             okHttp               : "com.squareup.okhttp3:okhttp:$ok_http_version",
