Fixed issue to show fake phone numbers in message list view.

--- a/SceytChatUiKit/build.gradle
+++ b/SceytChatUiKit/build.gradle
@@ -127,4 +127,5 @@ dependencies {
     api supportDependencies.photoView
     api supportDependencies.emojiBundled
     api supportDependencies.vanniktechGoogleEmoji
+    api supportDependencies.googleCodeLibPhone
 }
