--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -42,6 +42,7 @@ ext {
     glide_compiler_version = '4.12.0'
     gson_version = '2.8.9'
     glide_transformations_version = '4.3.0'
+    google_code_lib_phone_version = '8.12.54'
 
     ion_version = "3.1.0"
 
@@ -90,6 +91,7 @@ ext {
             flexbox              : "com.google.android.flexbox:flexbox:$flex_box_version",
             glide                : "com.github.bumptech.glide:glide:$glide_version",
             glideTransformations : "jp.wasabeef:glide-transformations:$glide_transformations_version",
+            googleCodeLibPhone   : "com.googlecode.libphonenumber:libphonenumber:$google_code_lib_phone_version",
             ion                  : "com.koushikdutta.ion:ion:$ion_version",
             koinAndroid          : "io.insert-koin:koin-android:$koin_version",
             lifecycleRuntime     : "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version",
