Add publishing gradle files

--- a/SceytChatUiKit/build.gradle
+++ b/SceytChatUiKit/build.gradle
@@ -129,3 +129,4 @@ dependencies {
     api supportDependencies.vanniktechGoogleEmoji
     api supportDependencies.googleCodeLibPhone
 }
+apply from: "${rootProject.projectDir}/maven-publish/publish-module.gradle"
