--- a/build.gradle
+++ b/build.gradle
@@ -12,3 +12,6 @@ apply from: 'dependencies.gradle'
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+apply plugin: 'io.github.gradle-nexus.publish-plugin'
+apply from: "${rootDir}/maven-publish/publish-root.gradle"
