Improved logic to connect Sceyt client.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,10 +57,10 @@ dependencies {
     implementation supportDependencies.lifecycleRuntime
     implementation supportDependencies.glide
     implementation supportDependencies.okHttp
-    implementation supportDependencies.voley
     implementation supportDependencies.koinAndroid
     implementation supportDependencies.moshiConverter
     implementation supportDependencies.jsoup
     implementation supportDependencies.sdp
     implementation supportDependencies.ssp
+    implementation supportDependencies.retrofitConverterGason
 }
