--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -72,49 +72,50 @@ ext {
     wave_seek_bar_version = "5.0.2"
 
     supportDependencies = [
-            appCompat            : "androidx.appcompat:appcompat:$app_compat_version",
-            asyncLayoutInflater  : "androidx.asynclayoutinflater:asynclayoutinflater:$async_layout_inflater_version",
-            activityKtx          : "androidx.activity:activity-ktx:$activity_ktx_version",
-            coreKtx              : "androidx.core:core-ktx:$core_ktx_version",
-            constraintlayout     : "androidx.constraintlayout:constraintlayout:$constraint_layout_version",
-            cardView             : "androidx.cardview:cardview:$card_view_version",
-            datastore            : "androidx.datastore:datastore:$datastore_version",
-            datastorePreferences : "androidx.datastore:datastore-preferences:$datastore_version",
-            exoPlayerMedia       : "androidx.media3:media3-exoplayer:$exo_player_media_version",
-            exoPlayerUi          : "androidx.media3:media3-ui:$exo_player_media_version",
-            emojiBundled         : "androidx.emoji2:emoji2-bundled:$emoji_bundled_version",
-            jsoup                : "org.jsoup:jsoup:$jsoup_version",
-            firebaseMessaging    : "com.google.firebase:firebase-messaging:$firebase_messaging_version",
-            firebaseBom          : "com.google.firebase:firebase-bom:$firebase_bom_version",
-            firebaseCrashlytics  : "com.google.firebase:firebase-crashlytics-ktx:$firebase_crashlitics_version",
-            fragmentKtx          : "androidx.fragment:fragment-ktx:$fragment_ktx_version",
-            flexbox              : "com.google.android.flexbox:flexbox:$flex_box_version",
-            glide                : "com.github.bumptech.glide:glide:$glide_version",
-            glideTransformations : "jp.wasabeef:glide-transformations:$glide_transformations_version",
-            googleCodeLibPhone   : "com.googlecode.libphonenumber:libphonenumber:$google_code_lib_phone_version",
-            ion                  : "com.koushikdutta.ion:ion:$ion_version",
-            koinAndroid          : "io.insert-koin:koin-android:$koin_version",
-            lifecycleRuntime     : "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version",
-            lifecycleViewModel   : "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version",
-            lottie               : "com.airbnb.android:lottie:$lottie_version",
-            liveEvent            : "com.github.hadilq.liveevent:liveevent:$live_event_version",
-            lightCompressor      : "com.github.AbedElazizShe:LightCompressor:$light_compressor_version",
-            voley                : "com.android.volley:volley:$voley_version",
-            vanniktechGoogleEmoji: "com.vanniktech:emoji-google:$vanniktech_google_emoji_version",
-            material             : "com.google.android.material:material:$material_version",
-            moshiConverter       : "com.squareup.retrofit2:converter-moshi:$moshi_converter_version",
-            okHttp               : "com.squareup.okhttp3:okhttp:$ok_http_version",
-            recyclerView         : "androidx.recyclerview:recyclerview:$recycler_view_version",
-            retrofit             : "com.squareup.retrofit2:retrofit:$retrofit_version",
-            roomCompiler         : "androidx.room:room-compiler:$room_version",
-            roomKtx              : "androidx.room:room-ktx:$room_version",
-            roomRuntime          : "androidx.room:room-runtime:$room_version",
-            sceytSdk             : "com.sceyt:sceyt-chat-android-sdk:$sceyt_sdk_version",
-            sdp                  : "com.intuit.sdp:sdp-android:$sdp_version",
-            ssp                  : "com.intuit.ssp:ssp-android:$ssp_version",
-            swipeRefreshLayout   : "androidx.swiperefreshlayout:swiperefreshlayout:$swipe_refresh_layout_version",
-            workRuntimeKtx       : "androidx.work:work-runtime-ktx:$work_version",
-            waveSeekBar          : "com.github.massoudss:waveformSeekBar:$wave_seek_bar_version",
-            photoView            : "com.github.chrisbanes:PhotoView:$photo_view_version",
+            appCompat             : "androidx.appcompat:appcompat:$app_compat_version",
+            asyncLayoutInflater   : "androidx.asynclayoutinflater:asynclayoutinflater:$async_layout_inflater_version",
+            activityKtx           : "androidx.activity:activity-ktx:$activity_ktx_version",
+            coreKtx               : "androidx.core:core-ktx:$core_ktx_version",
+            constraintlayout      : "androidx.constraintlayout:constraintlayout:$constraint_layout_version",
+            cardView              : "androidx.cardview:cardview:$card_view_version",
+            datastore             : "androidx.datastore:datastore:$datastore_version",
+            datastorePreferences  : "androidx.datastore:datastore-preferences:$datastore_version",
+            exoPlayerMedia        : "androidx.media3:media3-exoplayer:$exo_player_media_version",
+            exoPlayerUi           : "androidx.media3:media3-ui:$exo_player_media_version",
+            emojiBundled          : "androidx.emoji2:emoji2-bundled:$emoji_bundled_version",
+            jsoup                 : "org.jsoup:jsoup:$jsoup_version",
+            firebaseMessaging     : "com.google.firebase:firebase-messaging:$firebase_messaging_version",
+            firebaseBom           : "com.google.firebase:firebase-bom:$firebase_bom_version",
+            firebaseCrashlytics   : "com.google.firebase:firebase-crashlytics-ktx:$firebase_crashlitics_version",
+            fragmentKtx           : "androidx.fragment:fragment-ktx:$fragment_ktx_version",
+            flexbox               : "com.google.android.flexbox:flexbox:$flex_box_version",
+            glide                 : "com.github.bumptech.glide:glide:$glide_version",
+            glideTransformations  : "jp.wasabeef:glide-transformations:$glide_transformations_version",
+            googleCodeLibPhone    : "com.googlecode.libphonenumber:libphonenumber:$google_code_lib_phone_version",
+            ion                   : "com.koushikdutta.ion:ion:$ion_version",
+            koinAndroid           : "io.insert-koin:koin-android:$koin_version",
+            lifecycleRuntime      : "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version",
+            lifecycleViewModel    : "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version",
+            lottie                : "com.airbnb.android:lottie:$lottie_version",
+            liveEvent             : "com.github.hadilq.liveevent:liveevent:$live_event_version",
+            lightCompressor       : "com.github.AbedElazizShe:LightCompressor:$light_compressor_version",
+            voley                 : "com.android.volley:volley:$voley_version",
+            vanniktechGoogleEmoji : "com.vanniktech:emoji-google:$vanniktech_google_emoji_version",
+            material              : "com.google.android.material:material:$material_version",
+            moshiConverter        : "com.squareup.retrofit2:converter-moshi:$moshi_converter_version",
+            okHttp                : "com.squareup.okhttp3:okhttp:$ok_http_version",
+            recyclerView          : "androidx.recyclerview:recyclerview:$recycler_view_version",
+            retrofit              : "com.squareup.retrofit2:retrofit:$retrofit_version",
+            roomCompiler          : "androidx.room:room-compiler:$room_version",
+            roomKtx               : "androidx.room:room-ktx:$room_version",
+            roomRuntime           : "androidx.room:room-runtime:$room_version",
+            retrofitConverterGason: "com.squareup.retrofit2:converter-gson:$retrofit_version",
+            sceytSdk              : "com.sceyt:sceyt-chat-android-sdk:$sceyt_sdk_version",
+            sdp                   : "com.intuit.sdp:sdp-android:$sdp_version",
+            ssp                   : "com.intuit.ssp:ssp-android:$ssp_version",
+            swipeRefreshLayout    : "androidx.swiperefreshlayout:swiperefreshlayout:$swipe_refresh_layout_version",
+            workRuntimeKtx        : "androidx.work:work-runtime-ktx:$work_version",
+            waveSeekBar           : "com.github.massoudss:waveformSeekBar:$wave_seek_bar_version",
+            photoView             : "com.github.chrisbanes:PhotoView:$photo_view_version",
     ]
 }
