--- a/SceytChatUiKit/build.gradle
+++ b/SceytChatUiKit/build.gradle
@@ -113,6 +113,7 @@ dependencies {
     api supportDependencies.firebaseMessaging
     api supportDependencies.okHttp
     api supportDependencies.voley
+    annotationProcessor supportDependencies.roomCompiler
     kapt supportDependencies.roomCompiler
     api supportDependencies.roomRuntime
     api supportDependencies.roomKtx
